[project]
name = "refresh-memory"
version = "0.1.0"
description = "FastAPI refresh project"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "redis",
    "celery",
    "pytest",
    "pytest-asyncio",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]
